feat: duplicate options
